Initial commit - pharma optimizer

--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,8 @@ services:
   - name: pharma-optimizer
     type: web
     env: python
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
+    envVars:
+      - key: PYTHON_VERSION
+        value: "3.11.8"
